# phai

./: .env.example  .gitignore  .release-please-manifest.json  AGENTS.md  BRAND_BOOK.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  FINANCE_OS.md  GEMINI.md  LICENSE  PLAN.md  README.md  REPORTING_UX.md  SECURITY.md  deny.toml  entrega1-ajustes-pendentes.md  finish.md  gaps.plan.md  install.sh  next.config.js  package-lock.json  package.json  phai-brand.html  quality.md  release-please-config.json
.claude/commands/: create-adr.md
.github/: PULL_REQUEST_TEMPLATE.md
.plans/: web-ux-performance-data-consistency.md
.sentrux/: baseline.json  rules.toml
app/: globals.css  layout.tsx  page.tsx
crates/finance-cli/: CHANGELOG.md  Cargo.toml  README.md
crates/finance-cli/src/: cashflow_chart.rs  enrich.rs  forecast_cmd.rs  human_format.rs  main.rs  pulse.rs  review.rs  self_cmd.rs  serve.rs  serve_dashboard.html  sync_notify.rs  update.rs  update_state.rs
crates/finance-cli/tests/: e2e.rs
crates/finance-core/: CHANGELOG.md  Cargo.toml
crates/finance-core/src/: config.rs  idempotency.rs  installments.rs  legacy.rs  lib.rs  migrations.rs  models.rs  pluggy.rs  rules.rs  split_payload.rs  splits.rs
crates/finance-core/src/enrichment/: cnpj.rs  context.rs  fuzzy.rs  heuristics.rs  llm.rs  mod.rs  pipeline.rs  prompt.rs  replication.rs  rule_gen.rs  types.rs  web_search.rs
crates/finance-core/src/storage/: bigquery.rs  local.rs  mod.rs
crates/finance-core/tests/fixtures/enrichment/: sapiens_response.json
crates/phai-cli/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/phai-cli/assets/: Phai.icns
crates/phai-cli/src/: cashflow_chart.rs  enrich.rs  forecast_cmd.rs  human_format.rs  main.rs  mcp.rs  pulse.rs  review.rs  review_template.html  scenario_cmd.rs  self_cmd.rs  serve.rs  serve_assets.rs  serve_cache.rs  serve_dashboard.html  serve_install.rs  serve_lock.rs  sync_notify.rs  update.rs  update_state.rs
crates/phai-cli/tests/: e2e.rs
crates/phai-cli/web/: .gitignore  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
crates/phai-cli/web/.claude/: launch.json
crates/phai-cli/web/e2e/: forecast-keyboard.spec.ts  recategorize.spec.ts  smoke.spec.ts
crates/phai-cli/web/src/: App.tsx  main.tsx
crates/phai-cli/web/src/__tests__/: Onboarding.test.tsx  SyncChip.test.tsx  VersionChip.test.tsx
crates/phai-cli/web/src/bridge/: api.ts  sync.ts
crates/phai-cli/web/src/bridge/__tests__/: forecast-create-contract.test.ts  scenario.test.ts  seed-freshness.test.ts  seed.test.ts  sheet-writes.test.ts
crates/phai-cli/web/src/components/: CategoryPicker.tsx  ErrorBoundary.tsx  ModeSwitcher.tsx  PluggySyncButton.tsx  SearchPalette.tsx  Skeleton.tsx  TierBadge.tsx  TransactionModal.tsx  TxRow.tsx  UpdateBanner.tsx  ui.tsx
crates/phai-cli/web/src/components/__tests__/: Skeleton.test.tsx  TierBadge.test.tsx  TransactionModal.test.tsx
crates/phai-cli/web/src/design/: motion.ts  tokens.css
crates/phai-cli/web/src/hooks/: useDebounce.ts  useUnsyncedGuard.ts  useUpdateCheck.ts
crates/phai-cli/web/src/hooks/__tests__/: useUnsyncedGuard.test.tsx
crates/phai-cli/web/src/lib/: categoryEmoji.ts  derivations.ts  desktopShell.ts  dnd.tsx  format.ts  monthTheme.ts  treemap.ts
crates/phai-cli/web/src/lib/__tests__/: account-filter.test.ts  categoryEmoji.test.ts  commitment.test.ts  consistency.test.ts  fixtures.ts  grouping.test.ts  helpers.test.ts  monthTheme.test.ts  overlay.test.ts  scenario-months.test.ts  sheet-sort.test.ts  sheet-unified.test.ts  treemap.test.ts  warplan.test.ts
crates/phai-cli/web/src/livestore/: livestore.worker.ts  schema.ts
crates/phai-cli/web/src/livestore/__tests__/: store-version.test.ts
crates/phai-cli/web/src/views/: CardsPanel.tsx  Cashflow.tsx  CashflowChart.tsx  Dashboard.tsx  Forecasts.tsx  MonthDetail.tsx  Onboarding.tsx  Planning.tsx  PlanningChart.tsx  Review.tsx  types.ts
crates/phai-cli/web/src/views/__tests__/: CashDecisionPanel.test.ts  DashboardWindow.test.ts  ForecastKeyboard.test.tsx  PlanningChart.test.ts
crates/phai-cli/web/src/views/cards/: CardDetailPanel.tsx  SkeuomorphicCard.tsx
crates/phai-cli/web/src/views/cash/: AccountBalances.tsx  CashDecisionPanel.tsx
crates/phai-cli/web/src/views/categorias/: CategoryTreemap.tsx
crates/phai-cli/web/src/views/chart/: ChartHoverCard.tsx  ChartLegend.tsx  model.ts
crates/phai-cli/web/src/views/chart/__tests__/: model.test.ts
crates/phai-cli/web/src/views/month/: ForecastSection.tsx  ManualPlannedTransactions.tsx  MonthFilters.tsx
crates/phai-cli/web/src/views/planilha/: InsertRow.tsx  PlanilhaView.tsx  SheetFilterBar.tsx  SheetScenarioBar.tsx  sheetShared.ts
crates/phai-cli/web/src/views/planilha/__tests__/: InsertRow.test.tsx  csv.test.ts
crates/phai-cli/web/src/views/plano/: WarPlanPanel.tsx
crates/phai-cli/web/src/views/scenario/: ScenarioPanel.tsx
crates/phai-core/: CHANGELOG.md  Cargo.toml
crates/phai-core/src/: cashflow.rs  compat.rs  config.rs  idempotency.rs  installments.rs  invite.rs  lib.rs  migrations.rs  models.rs  pluggy.rs  rules.rs  scenario.rs  splits.rs
crates/phai-core/src/enrichment/: cnpj.rs  context.rs  llm.rs  mod.rs  pipeline.rs  pluggy_map.rs  prompt.rs  replication.rs  rule_gen.rs  types.rs
crates/phai-core/src/storage/: bigquery.rs  local.rs  mod.rs
crates/phai-core/tests/fixtures/enrichment/: pix_pessoa_fisica_response.json
docs/: ABSTRACTIONS.md  ARCHITECTURE.md  CNAME  GETTING-STARTED.md  PHAI_REBRAND_PLAN.md  VISION.md  cli-auto-update-plan.md  google-sheets-overrides.md  notarization.md  review-tui-ux-playbook.md  runbook-data-consistency.md  runbook-release-signing.md  tx-splits-cli-test-plan.md  whatsapp-pulse-cron.md
examples/: pluggy-config.example.json  pluggy.env.example  pluggy_fixture.json
installer/: Instalar Phai.command
lib/: deepseek.ts
scripts/: build-desktop-app.sh  local-sync.sh  setup-private-links.sh  setup_google_sheets_overrides.py
site/: CNAME  index.html  relatorio.html
(+142 files in other folders)
