[workspace]
members = ["crates/finance-core", "crates/finance-cli"]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "MIT"
authors = ["Finance OS contributors"]
rust-version = "1.90"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
csv = "1.3"
deunicode = "1.6"
dirs = "6.0"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.33", features = ["bundled"] }
rust_decimal = { version = "1.36", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
tokio = { version = "1.47", features = ["macros", "rt-multi-thread", "fs"] }
toml = "0.8"
uuid = { version = "1.18", features = ["serde", "v4", "v7"] }
yup-oauth2 = { version = "11.0", features = ["service-account"] }
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.20"
