[workspace]
members = ["crates/phai-core", "crates/phai-cli"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["phai contributors"]
rust-version = "1.90"
repository = "https://github.com/phai-run/phai"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.8", features = ["ws"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
csv = "1.3"
deunicode = "1.6"
dirs = "6.0"
futures = "0.3"
hex = "0.4"
moka = { version = "0.12", features = ["future"] }
nucleo = "0.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rig-core = { version = "0.6", default-features = false, features = ["derive"] }
rusqlite = { version = "0.33", features = ["bundled"] }
schemars = { version = "0.8", features = ["derive"] }
rust_decimal = { version = "1.36", features = ["serde", "maths"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
stop-words = "0.8"
tokio = { version = "1.47", features = ["macros", "rt-multi-thread", "fs", "io-std", "io-util", "time", "signal", "net"] }
tower-http = { version = "0.6", features = ["fs"] }
toml = "0.8"
uuid = { version = "1.18", features = ["serde", "v4", "v7"] }
yup-oauth2 = { version = "11.0", features = ["service-account"] }
assert_cmd = "2.0"
predicates = "3.1"
serial_test = "3"
tempfile = "3.20"
