[package]
name = "finance-cli"
version = "0.5.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
finance-core = { path = "../finance-core" }
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
flate2 = "1.0"
reqwest = { workspace = true }
sha2 = { workspace = true }
tar = "0.4"
tempfile = { workspace = true }
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
rusqlite.workspace = true
tempfile.workspace = true
