[package]
name = "finance-cli"
version = "1.6.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "fin"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
finance-core = { path = "../finance-core" }
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
flate2 = "1.0"
reqwest = { workspace = true }
sha2 = { workspace = true }
tar = "0.4"
tempfile = { workspace = true }
tokio.workspace = true
uuid.workspace = true
hostname = "0.4.2"
crossterm = "0.28"
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
nucleo.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
async-trait.workspace = true
predicates.workspace = true
rusqlite.workspace = true
rust_decimal_macros = "1.36"
serial_test.workspace = true
tempfile.workspace = true
