[package]
name = "finance-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
csv.workspace = true
deunicode.workspace = true
dirs.workspace = true
hex.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
tokio.workspace = true
toml.workspace = true
uuid.workspace = true
yup-oauth2.workspace = true
