[package]
name = "phai-cli"
version = "5.11.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "phai"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
clap.workspace = true
phai-core = { path = "../phai-core" }
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
flate2 = "1.0"
futures.workspace = true
minisign-verify = "0.2"
reqwest = { workspace = true }
sha2 = { workspace = true }
tar = "0.4"
tempfile = { workspace = true }
tokio = { workspace = true, features = ["net"] }
tower-http.workspace = true
uuid.workspace = true
hostname = "0.4.2"
include_dir = "0.7"

[dev-dependencies]
assert_cmd.workspace = true
async-trait.workspace = true
predicates.workspace = true
rusqlite.workspace = true
rust_decimal_macros = "1.36"
serial_test.workspace = true
tempfile.workspace = true
