[package]
name = "phai-core"
version = "4.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
csv.workspace = true
deunicode.workspace = true
dirs.workspace = true
hex.workspace = true
moka.workspace = true
nucleo.workspace = true
reqwest.workspace = true
rig-core.workspace = true
rusqlite.workspace = true
rust_decimal.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
stop-words.workspace = true
tokio.workspace = true
toml.workspace = true
uuid.workspace = true
yup-oauth2.workspace = true

[dev-dependencies]
serial_test.workspace = true
tempfile.workspace = true
wiremock = "0.6"
